Fix slot selecting issue on mobile (#154)
* Fix slot selecting issue on mobile

* Fix mobile error

* Minor update

--- a/frontend/src/components/booking-calendar/booking-calendar.module.scss
+++ b/frontend/src/components/booking-calendar/booking-calendar.module.scss
@@ -27,7 +27,8 @@
 }
 
 :global(.rbc-month-view .rbc-date-cell) {
-  padding: 0;
+  min-height: 50px;
+  padding-bottom: 10px;
 }
 
 :global(.rbc-month-view .rbc-date-cell .rbc-button-link) {
@@ -36,4 +37,6 @@
   height: 100%;
   padding: 0.25rem 0.5rem;
   text-align: left;
+  padding-bottom: 150px;
 }
+
